--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,24 +1,15 @@
+{% extends 'base.html' %}
+{% block title %} Book Shop {% endblock %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Book Shop</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-<!--    <link rel="stylesheet" href="{% static 'main/main.css' %}">-->
-</head>
-<body>
-<div style="display: flex; transform: scale(1.05)">
-   {% for book in books %}
-   <div style="width:150px; height:280px; background-color:grey; border-radius:10px; margin-left: 20px">
-       <div style="margin:10%">
-       <h2 style="font-size: 12px">{{ book }}</h2>
-       <h3 style="font-size: 10px">{{ book.author }} </h3>
-       <p style="font-size: 10px">{{ book.status }}</p>
-       <img src="{{ book.image.url }}" alt="" width="100" height="150">
-       </div>
-   </div>
-   {% endfor %}
+{% block content %}
+    <img src="{% static 'img/bookshop.jpg' %}" class="img-fluid" alt="...">
+<div class="container">
+  <div class="row g-2">
+    {% for genre in genres %}
+    <div class="col-6">
+      <div class="p-3 border bg-light"><a href="{% url 'book-list' genre.slug %}">{{ genre }}</a></div>
+    </div>
+    {% endfor %}
+  </div>
 </div>
-</body>
-</html>
+{% endblock %}
